src/objects/ACCL__Account_Org_Unit__c.object
<CustomObject>
    <description>Holds the details of the relationship between customer and the org unit.</description>
    <fields>
        <fullName>ACCL__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to customer.</description>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Org Units</relationshipLabel>
        <relationshipName>Account_Org_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates if the relationship is active or not.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Org_Unit__c</fullName>
        <description>Reference to Org Unit.</description>
        <label>Org Unit</label>
        <referenceTo>ACCL__Org_Unit__c</referenceTo>
        <relationshipLabel>Customer Org Units</relationshipLabel>
        <relationshipName>Account_Org_Units</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ACCL__Record_Link__c</fullName>
        <description>Link to the detail page of the Customer Org Unit record.</description>
        <formula>HYPERLINK(&quot;/&quot; &amp;Id, $Label.accl__record_link, &quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Valid_From__c</fullName>
        <defaultValue>today()</defaultValue>
        <description>From this date on the entry is valid.</description>
        <label>Valid From</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Valid_Thru__c</fullName>
        <defaultValue>DATE(2099,12,31)</defaultValue>
        <description>Until this date the entry is valid.</description>
        <label>Valid Thru</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MDLZ_ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Customer Org Unit</label>
    <nameField>
        <displayFormat>AOU-{0000}</displayFormat>
        <label>Customer Org Unit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Org Units</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ACCL__Account_Not_Empty</fullName>
        <active>true</active>
        <errorConditionFormula>OR (ISBLANK(ACCL__Account__c), ISNULL(ACCL__Account__c))</errorConditionFormula>
        <errorDisplayField>ACCL__Account__c</errorDisplayField>
        <errorMessage>The Customer can&apos;t be empty.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Sales_Org_should_be_same</fullName>
        <active>true</active>
        <description>The Org Unit and the Customer Recipient must have the same Sales Org.</description>
        <errorConditionFormula>ACCL__Account__r.ACCL__Sales_Org__c &lt;&gt; TEXT( ACCL__Org_Unit__r.ACCL__Sales_Org__c )</errorConditionFormula>
        <errorMessage>The Org Unit and the Customer Recipient must have the same Sales Org.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Valid_From_Valid_Thru_Validation</fullName>
        <active>true</active>
        <description>Valid From can&apos;t be later than Valid Thru.</description>
        <errorConditionFormula>ACCL__Valid_From__c &gt; ACCL__Valid_Thru__c</errorConditionFormula>
        <errorMessage>Valid From can&apos;t be later than Valid Thru.</errorMessage>
    </validationRules>
</CustomObject>